2005-01-31  JP Rosevear  <jpr@novell.com>

	Fixes #71937

	* evolution-mail.schemas.in.in: fix spelling error

	* mail-errors.xml: fix two spelling errors

2005-01-31  Not Zed  <NotZed@Ximian.com>

	** See bug #67083

	* em-format-html.c (efh_format_text_header): no-wrap the header line.

	** See bug #69850
	
	* mail-autofilter.c (rule_from_message): dont crash if we're
	missing the requested headers.

	** See bug #71521.

	* em-account-editor.c (emae_url_set_hostport): dont ever set a
	NULL host.

2005-01-28  Not Zed  <NotZed@Ximian.com>

	* em-account-editor.c (emae_service_provider_changed): handle
	'hide' bits, don't get/set values from the widgets at all.

	* em-account-editor.c: put some tables back into the
	druid and editor, since econfig supports tables now.

	* em-account-editor.c (emae_service_provider_changed): handle
	'hide' bits, don't get/set values from the widgets at all.

	* em-account-editor.c: put some tables back into the
	druid and editor, since econfig supports tables now.

	* em-account-editor.c (emae_service_provider_changed): handle
	'hide' bits, don't get/set values from the widgets at all.

	* em-account-editor.c: put some tables back into the
	druid and editor, since econfig supports tables now.

	** See bug #71520.
	
	* em-account-prefs.c (account_edit_clicked): repeat the nasty hack
	from account_edit, to refresh the list after edit.

2005-01-27  Not Zed  <NotZed@Ximian.com>

	* See bug #69815.
	
	* mail-component.c (impl_quit): shutdown vfolders as first step.

	* mail-vfolder.c (vfolder_setup_do): if we're shutdown during
	processing, just noop.
	(vfolder_adduri_do): same.
	(mail_vfolder_shutdown): set the shutdown flag.

2005-01-27  Rodney Dawes  <dobey@novell.com>

	* mail-config.glade: Fix the labels in the account druid to be
	left aligned, and justified left
	Fix the border and spacing for all the vboxes in the account druid
	pages to be HIG compliant
	Fix the account naming info label to be more concise

	Fixes #68696
